<resources>
    <string name="app_name">SmartHome</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="user_name">Tài Khoản</string>
    <string name="password">Mật Khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="register">Tạo Tài Khoản Mới</string>
    <string name="confirm_pass">Nhập Lại Mật Khẩu</string>
    <string name="create_new_account">Đăng Ký</string>
    <string name="switch_to_register_page">Chưa có tài khoản? Tạo ngay.</string>
    <string name="switch_to_login_page">Đã có tài khoản?</string>
    <string name="reset_your_password">Đặt Lại Mật Khẩu</string>
    <string name="send_code_to_email">Chúng tôi sẽ gửi mã xác thực tới email của bạn, hãy nhập mã này để xác thực đó là bạn.</string>
    <string name="verify">Xác Nhận</string>
    <string name="back_to_login_page">Quay lại trang đăng nhập.</string>
    <string name="verify_code">Mã Xác Thực</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="settings">Cài Đặt</string>
    <string name="account_created">Tạo tài khoản mới thành công.</string>
    <string name="missing_info">Vui lòng nhập đầy đủ thông tin.</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="changed">Đổi mật khẩu thành công.</string>
    <string name="user_info">Thông Tin Người Dùng</string>
    <string name="user_nameinfo">Họ Tên</string>
    <string name="user_email">Email</string>
    <string name="user_phonenumber">Số Điện Thoại</string>

</resources>