<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".RegisterActivity"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_view"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="230dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/new_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_title"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/new_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_email_input"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pass_input"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/confirm_pass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="95dp"
            android:background="@drawable/rounded_button"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/switch_to_register_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_btn"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/switch_to_login_page"
            android:clickable="true"
            android:onClick="switchToLoginPage"
            android:textColor="@color/forgot"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
