<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ForgotActivity"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_view"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="200dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/forgot_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_your_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/forgotusername_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotusername_input"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/verify_code"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/code_input"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/rounded_button"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_below="@+id/forgot_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/send_code_to_email"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/switch_to_register_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_btn"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="switchToLoginPage"
            android:text="@string/back_to_login_page"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/textView2"
            android:layout_alignEnd="@+id/forgotusername_input"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_textbox"
            android:text="Gửi"
            android:textSize="15sp"/>

    </RelativeLayout>


</RelativeLayout>
