<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#80000000"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="150dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
        />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in"
            android:layout_marginTop="35dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_marginTop="14dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="105dp"
            android:background="#FF0000"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>