<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ChangePasswordActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/top_bar_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline23">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/baseline_arrow_back_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_view"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/change_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="switchToHome"
            app:layout_constraintBottom_toTopOf="@+id/current_password_input"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/current_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_title"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/change_new_password_input"
            app:layout_constraintTop_toBottomOf="@+id/change_password_title"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/change_new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_email_input"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/change_confirm_pass"
            app:layout_constraintTop_toBottomOf="@+id/current_password_input"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/change_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pass_input"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="20dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/verify_change_password_btn"
            app:layout_constraintTop_toBottomOf="@+id/change_new_password_input"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <Button
            android:id="@+id/verify_change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_confirm_pass"
            tools:layout_editor_absoluteX="110dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>