<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ChangePasswordActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/top_bar_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline23">

        <ImageView
            android:id="@+id/info_back_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/baseline_arrow_back_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_view"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/user_info"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_name_input"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_title"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_nameinfo"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/user_email_input"
            app:layout_constraintTop_toBottomOf="@+id/user_info_title"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/user_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_email"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/user_phonenumber_input"
            app:layout_constraintTop_toBottomOf="@+id/user_name_input"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/user_phonenumber_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_textbox"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="20dp"
            android:hint="@string/user_phonenumber"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/userinfo_change_btn"
            app:layout_constraintTop_toBottomOf="@+id/user_email_input"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="15dp" />

        <Button
            android:id="@+id/userinfo_change_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="Cập Nhật"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_phonenumber_input"
            tools:layout_editor_absoluteX="110dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>